--- a/styles/general.css
+++ b/styles/general.css
@@ -17,6 +17,13 @@
     border-radius: 10px;
 }
 
+.big-color-block {
+    height: 230px;
+    width: 230px;
+    border-radius: 10px;
+    margin-right: 15px;
+}
+
 .color-label {
     display: flex;
     padding: 10px 10px 0px 10px;
@@ -26,4 +33,8 @@
 
 .color-name {
     font-size: 22px;
+}
+
+.flex {
+    display: flex;
 }
